--- a/requirements.txt
+++ b/requirements.txt
@@ -19,6 +19,7 @@ django-crispy-forms==1.13.0
 django-dbbackup==3.3.0
 django-heroku==0.3.1
 django-import-export==2.7.1
+django-multiselectfield==0.1.12
 django-widgets==0.1.16
 djangorestframework==3.12.4
 et-xmlfile==1.1.0
